--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -89,7 +89,7 @@
         Afiliados
     </div>
 
-    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr; margin-top: 20px; gap: 20px;">
+    <div style="display: flex; align-items: center; flex-flow: wrap; grid-gap: 20px; margin-top: 20px;">
         <div>
             <a class="boton-pequeño" href="https://www.humblebundle.com/partner/dashboard/sales" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Humble</a>
         </div>
