--- a/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
@@ -152,7 +152,7 @@
 				{
 					<div style="font-size: 14px; margin-top: 5px; padding: 5px;">
 						<div>
-							@Herramientas.Idiomas.CogerCadena(idioma, "Tooltip1", "Index")
+							@Herramientas.Idiomas.CogerCadena(idioma, "String1", "Tooltip")
 						</div>
 
 						@if (string.IsNullOrEmpty(tooltip.Bundles) == false)
