--- a/pepeizqs deals web/wwwroot/css/resto.css
+++ b/pepeizqs deals web/wwwroot/css/resto.css
@@ -748,14 +748,13 @@ select {
     }
 
 .opciones-panel {
-    height: calc(100% - var(--alturaCabecera));
+    height: 100%;
     width: 100%;
     left: 0;
     top: 0;
     overflow-x: auto;
     position: fixed;
-    z-index: 1001;
-    margin-top: var(--alturaCabecera);
+    z-index: 10001;
     padding: 10px;
     backdrop-filter: blur(20px);
 }
