--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -150,7 +150,7 @@
 					{
 						@if (string.IsNullOrEmpty(juego.Analisis.Cantidad) == false && string.IsNullOrEmpty(juego.Analisis.Porcentaje) == false)
 						{
-							<div style="font-size: 14px; margin-bottom: 15px; flex: 0 0 auto;">
+							<div style="font-size: 14px; margin-bottom: 10px; flex: 0 0 auto;">
 								<div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-reviews')">
 									<div style="display: flex; align-items: center; justify-content: right;">
 										@if (int.Parse(juego.Analisis.Porcentaje) > 74)
@@ -179,34 +179,58 @@
 						}						
 					}
 
-					<div style="display: flex; align-items: center; justify-content: right;">
+					<div style="display: flex; align-items: center; justify-content: right; gap: 20px;">
 						@if (juego.Caracteristicas != null)
 						{
-							<div>
+							<div style="display: flex; align-items: center; gap: 8px; padding: 5px 10px; height: 26px;">
 								@if (juego.Caracteristicas.Windows == true)
 								{
-									<img src="/imagenes/sistemas/windows.webp" alt="System" />
+									<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 15 15"><path d="M0 1h7v7H0zM0 9h7v7H0zM8 9h7v7H8zM8 1h7v7H8z" fill="var(--colorTexto)"></path></svg>
 								}
 
 								@if (juego.Caracteristicas.Mac == true)
 								{
-									<img src="/imagenes/sistemas/mac.webp" alt="System" />
+									<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 410 410"><path d="M361.05 137.57c-61 66-57 118 13 165-11 33-29 63-54 89-17 18-38 25-60 14-32-15-62-14-93 1-18 9-35 5-51-8-49-40-95-150-72-219 18-55 75-99 137-69 21 10 40 6 61-2 51-19 87-10 119 29zm-153-45c0-50 26-80 78-92 5 51-28 91-78 92z" fill="var(--colorTexto)"></path></svg>
 								}
 
 								@if (juego.Caracteristicas.Linux == true)
 								{
-									<img src="/imagenes/sistemas/linux.webp" alt="System" />
+									<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 16 16"><path d="M6.813.034C-.65.635 1.329 8.518 1.218 11.158 1.119 12.555.655 14.262 0 16h2.018c.207-.737.36-1.465.425-2.159.122.085.252.167.39.245.227.133.42.31.626.498.48.438 1.025.933 2.09.996.071.004.143.006.213.006 1.077 0 1.813-.471 2.404-.85.284-.181.529-.338.76-.413.654-.205 1.226-.536 1.654-.957.067-.066.128-.134.187-.202.238.873.565 1.855.926 2.835H16c-1.034-1.597-2.1-3.162-2.079-5.159.044-3.948.45-11.409-7.109-10.806zm3.17 10.145a12.94 12.94 0 0 0-.852-.328 2.08 2.08 0 0 0 .213-.894c.018-.819-.395-1.483-.922-1.485-.526 0-.967.662-.985 1.48v.08a4.609 4.609 0 0 0-.956-.324l-.004-.093c-.03-1.491.884-2.725 2.043-2.756C9.68 5.827 10.642 7.01 10.672 8.5a3.192 3.192 0 0 1-.474 1.777 3.108 3.108 0 0 0-.215-.099zm-1.276.488c.253.087.539.185.921.35l.007.002c.357.147.78.415.76.859-.03.68-.92 1.32-1.743 1.578l-.005.002c-.342.11-.647.306-.97.513-.543.347-1.104.706-1.915.706-.054 0-.107 0-.16-.004-.744-.043-1.09-.36-1.53-.76-.232-.212-.472-.43-.781-.612l-.007-.004c-.667-.377-1.081-.845-1.108-1.253-.013-.203.077-.379.269-.522.416-.312.695-.516.88-.651.204-.15.266-.195.312-.238l.106-.103c.382-.372 1.021-.993 2.002-.993.6 0 1.264.23 1.972.686.333.217.623.317.99.444zM5.6 12.046c-.954-.07-1.721-.33-2.058-.559a.455.455 0 0 0-.51.753c.542.367 1.501.64 2.503.712.17.013.356.02.557.02.871 0 1.978-.083 3.162-.634a.455.455 0 0 0-.383-.824c-1.28.596-2.471.59-3.27.532zM4.25 8.97c-.072-.732-.462-1.285-.873-1.234-.41.05-.686.684-.614 1.415.03.32.123.604.25.82-.031.025-.12.09-.224.166l-.286.21c-.312-.408-.524-.993-.562-1.654-.074-1.29.542-2.373 1.377-2.422.834-.048 1.57.957 1.645 2.245.004.07.006.139.006.207A3.25 3.25 0 0 0 4.25 9a.614.614 0 0 0-.001-.029z" fill="var(--colorTexto)"></path></svg>
 								}
 							</div>
-						}												
+						}
+						
+						@if (juego.Deck != JuegoDeck.Desconocido)
+						{
+							<button @onclick="(e => DeckEnseñar(e))" class="boton-expandir" style="color: var(--colorTexto); text-decoration: none; border: 0px;">
+								<div style="display: flex; align-items: center; gap: 10px; padding: 5px 10px; height: 32px;">
+									<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path opacity="0.84" fill-rule="evenodd" clip-rule="evenodd" d="M7.77715 4.30197C10.9241 4.30197 13.4752 6.85305 13.4752 9.99997C13.4752 13.1469 10.9241 15.698 7.77715 15.698V18.8889C12.6864 18.8889 16.666 14.9092 16.666 9.99997C16.666 5.09078 12.6864 1.11108 7.77715 1.11108V4.30197ZM7.77756 13.8889C9.92533 13.8889 11.6664 12.1477 11.6664 9.99997C11.6664 7.8522 9.92533 6.11108 7.77756 6.11108C5.62979 6.11108 3.88867 7.8522 3.88867 9.99997C3.88867 12.1477 5.62979 13.8889 7.77756 13.8889Z" fill="var(--colorTexto)"></path></svg>
+
+									@if (juego.Deck == JuegoDeck.Verificado)
+									{
+										<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.33342 11.9222L14.4945 5.76667L16.4556 7.72779L8.33342 15.8556L3.26675 10.7833L5.22786 8.82223L8.33342 11.9222Z" fill="var(--deckVerificado)"></path></svg>
+									}
+
+									@if (juego.Deck == JuegoDeck.Jugable)
+									{
+										<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.61079 9.44444V15H11.3886V9.44444H8.61079ZM9.07372 8.05245C9.34781 8.23558 9.67004 8.33333 9.99967 8.33333C10.4417 8.33333 10.8656 8.15774 11.1782 7.84518C11.4907 7.53262 11.6663 7.10869 11.6663 6.66667C11.6663 6.33703 11.5686 6.0148 11.3855 5.74072C11.2023 5.46663 10.942 5.25301 10.6375 5.12687C10.3329 5.00072 9.99783 4.96771 9.67452 5.03202C9.35122 5.09633 9.05425 5.25507 8.82116 5.48815C8.58808 5.72124 8.42934 6.01821 8.36503 6.34152C8.30072 6.66482 8.33373 6.99993 8.45988 7.30447C8.58602 7.60902 8.79964 7.86931 9.07372 8.05245Z" fill="var(--deckJugable)"></path></svg>
+									}
+
+									@if (juego.Deck == JuegoDeck.NoSoportado)
+									{
+										<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.193 15.606a7 7 0 0 1-9.799-9.799l9.8 9.8Zm1.414-1.414a7 7 0 0 0-9.799-9.799l9.8 9.8ZM19.001 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" fill="var(--colorTexto)"></path></svg>
+									}
+								</div>
+							</button>
+						}
 
 						@if (usuario != null)
 						{
 							if (global::BaseDatos.Usuarios.Buscar.RolDios(usuario.UserName) == true)
 							{
-								@if (juego.IdSteam > 0)
+								if (juego.IdSteam > 0)
 								{
-									<div style="margin-left: 20px;">
+									<div>
 										<label>@Idiomas.CogerCadena(idioma, "String1", "Game")</label>
 
 										@if (juego.IdSteam > 0)
@@ -1306,6 +1330,132 @@
 	</div>
 }
 
+@if (enseñarDeck == true)
+{
+	<div class="opciones-panel">
+		<div style="max-width: 800px; background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%);">
+			<div style="display: flex; align-items: start; flex-direction: row; gap: 30px;">
+				<button @onclick="@(e => DeckCerrar(e))" class="boton-pequeño" style="width: auto; text-align: center; font-size: 23px; padding: 10px 20px;">
+					<i class="fa-solid fa-arrow-left"></i>
+				</button>
+
+				<div style="display: flex; flex-direction: column;">
+					<div style="display: flex; align-items: center; gap: 20px;">
+						<label style="font-size: 18px;">@Herramientas.Idiomas.CogerCadena(idioma, "String1", "Deck")</label>
+
+						<div style="height: 24px;">
+							@if (juego.Deck == JuegoDeck.Verificado)
+							{
+								<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.33342 11.9222L14.4945 5.76667L16.4556 7.72779L8.33342 15.8556L3.26675 10.7833L5.22786 8.82223L8.33342 11.9222Z" fill="var(--deckVerificado)"></path></svg>
+							}
+
+							@if (juego.Deck == JuegoDeck.Jugable)
+							{
+								<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.61079 9.44444V15H11.3886V9.44444H8.61079ZM9.07372 8.05245C9.34781 8.23558 9.67004 8.33333 9.99967 8.33333C10.4417 8.33333 10.8656 8.15774 11.1782 7.84518C11.4907 7.53262 11.6663 7.10869 11.6663 6.66667C11.6663 6.33703 11.5686 6.0148 11.3855 5.74072C11.2023 5.46663 10.942 5.25301 10.6375 5.12687C10.3329 5.00072 9.99783 4.96771 9.67452 5.03202C9.35122 5.09633 9.05425 5.25507 8.82116 5.48815C8.58808 5.72124 8.42934 6.01821 8.36503 6.34152C8.30072 6.66482 8.33373 6.99993 8.45988 7.30447C8.58602 7.60902 8.79964 7.86931 9.07372 8.05245Z" fill="var(--deckJugable)"></path></svg>
+							}
+
+							@if (juego.Deck == JuegoDeck.NoSoportado)
+							{
+								<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.193 15.606a7 7 0 0 1-9.799-9.799l9.8 9.8Zm1.414-1.414a7 7 0 0 0-9.799-9.799l9.8 9.8ZM19.001 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" fill="var(--colorTexto)"></path></svg>
+							}
+						</div>
+					</div>
+
+					<hr />
+
+					@if (juego.Deck == JuegoDeck.Verificado)
+					{
+						<label>@string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String2", "Deck"), juego.Nombre)</label>
+					}
+
+					@if (juego.Deck == JuegoDeck.Jugable)
+					{
+						<label>@string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String3", "Deck"), juego.Nombre)</label>
+					}
+
+					@if (juego.Deck == JuegoDeck.NoSoportado)
+					{
+						<label>@string.Format(Herramientas.Idiomas.CogerCadena(idioma, "String4", "Deck"), juego.Nombre)</label>
+					}
+
+					@if (juego.DeckTokens != null)
+					{
+						if (juego.DeckTokens.Count > 0)
+						{
+							<hr />
+
+							<div style="display: flex; flex-direction: column; gap: 20px;">
+								@foreach (var token in juego.DeckTokens)
+								{
+									if (token.Tipo == 1)
+									{
+										<div style="background-color: var(--fondoAlerta); padding: 8px 16px;">
+											@{
+												string cadenaMensaje = Idiomas.CogerCadena(idioma, token.Mensaje, "Deck");
+
+												if (string.IsNullOrEmpty(cadenaMensaje) == false)
+												{
+													<label style="font-size: 15px;">@cadenaMensaje</label>
+												}
+												else
+												{
+													global::BaseDatos.Errores.Insertar.Mensaje("Deck no encontrado", token.Mensaje, "https://store.steampowered.com/app/" + juego.IdSteam);
+
+													<label>@token.Mensaje (No Check)</label>
+												}
+											}
+										</div>
+									}
+								}
+
+								@foreach (var token in juego.DeckTokens)
+								{
+									if (token.Tipo != 1)
+									{
+										<div style="display: flex; align-items: center; gap: 15px;">
+											<div style="max-height: 20px; max-width: 20px;">
+												@if (token.Tipo == 2)
+												{
+													<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M14.193 15.606a7 7 0 0 1-9.799-9.799l9.8 9.8Zm1.414-1.414a7 7 0 0 0-9.799-9.799l9.8 9.8ZM19.001 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" fill="var(--colorTexto)"></path></svg>
+												}
+
+												@if (token.Tipo == 3)
+												{
+													<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.61079 9.44444V15H11.3886V9.44444H8.61079ZM9.07372 8.05245C9.34781 8.23558 9.67004 8.33333 9.99967 8.33333C10.4417 8.33333 10.8656 8.15774 11.1782 7.84518C11.4907 7.53262 11.6663 7.10869 11.6663 6.66667C11.6663 6.33703 11.5686 6.0148 11.3855 5.74072C11.2023 5.46663 10.942 5.25301 10.6375 5.12687C10.3329 5.00072 9.99783 4.96771 9.67452 5.03202C9.35122 5.09633 9.05425 5.25507 8.82116 5.48815C8.58808 5.72124 8.42934 6.01821 8.36503 6.34152C8.30072 6.66482 8.33373 6.99993 8.45988 7.30447C8.58602 7.60902 8.79964 7.86931 9.07372 8.05245Z" fill="var(--deckJugable)"></path></svg>
+												}
+
+												@if (token.Tipo == 4)
+												{
+													<svg style="display: block; width: 100%; height: 100%;" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19ZM8.33342 11.9222L14.4945 5.76667L16.4556 7.72779L8.33342 15.8556L3.26675 10.7833L5.22786 8.82223L8.33342 11.9222Z" fill="var(--deckVerificado)"></path></svg>
+												}
+											</div>
+
+											@{
+												string cadenaMensaje = Idiomas.CogerCadena(idioma, token.Mensaje, "Deck");
+
+												if (string.IsNullOrEmpty(cadenaMensaje) == false)
+												{
+													<label style="font-size: 15px;">@cadenaMensaje</label>
+												}
+												else
+												{
+													global::BaseDatos.Errores.Insertar.Mensaje("Deck no encontrado", token.Mensaje, "https://store.steampowered.com/app/" + juego.IdSteam);
+
+													<label>@token.Mensaje (No Check)</label>
+												}
+											}
+										</div>
+									}
+								}
+							</div>
+						}
+					}
+				</div>
+			</div>
+		</div>
+	</div>
+}
+
 @code {
 
 	#nullable disable
@@ -1358,21 +1508,26 @@
 					}
 				}
 
-				bool actualizarDatosAPI = false;
-
-				if (juego.FechaSteamAPIComprobacion + TimeSpan.FromDays(21) < DateTime.Now)
+				if (juego.IdSteam > 0)
 				{
-					actualizarDatosAPI = true;
-				}
+					bool actualizarDatosAPI = false;
 
-				if (juego.Categorias == null && juego.Generos == null)
-				{
-					actualizarDatosAPI = true;
-				}
+					if (juego.FechaSteamAPIComprobacion + TimeSpan.FromDays(60) < DateTime.Now)
+					{
+						actualizarDatosAPI = true;
+					}
 
-				if (actualizarDatosAPI == true)
-				{
-					if (juego.IdSteam > 0)
+					if (juego.Categorias == null && juego.Generos == null)
+					{
+						actualizarDatosAPI = true;
+
+						if (juego.Tipo == JuegoTipo.Music)
+						{
+							actualizarDatosAPI = false;
+						}
+					}
+
+					if (actualizarDatosAPI == true)
 					{
 						global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatos(juego.IdSteam.ToString());
 
@@ -1381,7 +1536,75 @@
 							global::BaseDatos.Juegos.Actualizar.Media(nuevoJuego, juego);
 						}
 					}
-				}
+
+					if (juego.Tipo == JuegoTipo.Game)
+					{
+						bool actualizarDeckAPI = false;
+
+						if (juego.DeckComprobacion == null)
+						{
+							actualizarDeckAPI = true;
+						}
+						else
+						{
+							if (juego.DeckComprobacion + TimeSpan.FromDays(180) < DateTime.Now)
+							{
+								actualizarDeckAPI = true;
+							}
+						}
+
+						if (juego.DeckTokens == null)
+						{
+							actualizarDeckAPI = true;
+						}
+
+						if (actualizarDeckAPI == true)
+						{
+							APIs.Steam.SteamDeckAPI deckAPI = await APIs.Steam.Juego.CargarDatosDeck(juego.IdSteam);
+							bool vacio = true;
+
+							if (deckAPI != null)
+							{
+								if (deckAPI.Datos != null)
+								{
+									juego.Deck = (JuegoDeck)deckAPI.Datos.Resultado;
+									juego.DeckComprobacion = DateTime.Now;
+
+									if (deckAPI.Datos.Tokens != null)
+									{
+										if (deckAPI.Datos.Tokens.Count > 0)
+										{
+											List<JuegoDeckToken> tokens = new List<JuegoDeckToken>();
+
+											foreach (var token in deckAPI.Datos.Tokens)
+											{
+												if (string.IsNullOrEmpty(token.Token) == false)
+												{
+													JuegoDeckToken nuevoToken = new JuegoDeckToken();
+													nuevoToken.Tipo = token.Tipo;
+													nuevoToken.Mensaje = token.Token;
+
+													tokens.Add(nuevoToken);
+												}
+											}
+
+											juego.DeckTokens = tokens;
+										}
+									}
+
+									vacio = false;
+									global::BaseDatos.Juegos.Actualizar.Deck(juego);
+								}
+							}
+
+							if (vacio == true)
+							{
+								juego.DeckComprobacion = DateTime.Now;
+								global::BaseDatos.Juegos.Actualizar.DeckVacio(juego);
+							}
+						}
+					}
+				}				
 			}
 		}
 	}
@@ -2268,6 +2491,29 @@
 		{
 			mostrarDescuentosBajos = false;
 		}
+	}
+
+	#endregion
+
+	#region Deck
+
+	private bool enseñarDeck = false;
+
+	private void DeckEnseñar(MouseEventArgs e)
+	{
+		if (enseñarDeck == false)
+		{
+			enseñarDeck = true;
+		}
+		else
+		{
+			enseñarDeck = false;
+		}
+	}
+
+	private void DeckCerrar(MouseEventArgs e)
+	{
+		enseñarDeck = false;
 	}
 
 	#endregion
