--- a/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/ResultadoJuego.razor
@@ -120,7 +120,7 @@
 				<video src="@tooltip.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
 			}
 
-			<div style="padding: 15px; text-align: left;">
+			<div style="padding: 15px; text-align: left; max-width: 460px;">
 				<div>
 					@tooltip.Nombre
 				</div>
