--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -177,10 +177,12 @@
 				<div style="width: 20%;">
 					<input type="text" @oninput="TextoCambiaIdSteam" class="entrada-texto" value="@idSteam" />
 				</div>
-				<div style="width: 65%; padding: 0px 30px;">
+				<div style="width: 65%; padding: 0px 30px; display: flex; align-items: center; gap: 20px;">
 					<button @onclick="(async () => await ActualizarDatosSteamApi())" class="boton-pequeño" style="padding: 10px 15px; width: auto;">
 						Actualizar
 					</button>
+
+					<label>@juego.FechaSteamAPIComprobacion.ToString()</label>
 				</div>
 			</div>
 
